fix unneeded scrollbar showing up

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -14,12 +14,12 @@ a {
 
 body {
   background-color: var(--bs-tertiary-bg);
-
+  min-height: 100vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 
   .container {
-    margin-top: 20px;
+    padding-top: 20px;
   }
 
   &.resize-animation-stopper *,
